<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_blue"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InicioFragment">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/hipica_portada"
        android:textSize="25sp"
        android:background="@color/grey"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icono_appreservas"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="@id/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>



    <Button
        android:id="@+id/btlogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btregister"
        app:layout_constraintVertical_bias="0.4"/>

    <Button
        android:id="@+id/btregister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/registro"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

</androidx.constraintlayout.widget.ConstraintLayout>